# partcad

./: .bumpversion.toml  .coderabbit.yaml  .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vscodeignore  404.html  NOTES.md  README.md  behave.ini  changes.patch  env.sh  example.yaml  generate_refresh_token.py  index.html  noxfile.py  ocp_vscode_demo.py  pyproject.toml  requirements.txt  sentry.py  sitemap.xml
.devcontainer/: .bumpversion.toml  Dockerfile  (+19 more)
docs/: PROMPTS.md  braindump.md  pyproject.toml  requirements.txt
docs/mkdocs/: mkdocs.yml  pythonTestAdapter.md
docs/mkdocs/docs/: cli.md  development.md  index.md  roadmap.md
docs/mkdocs/docs/blog/: .authors.yml  index.md
docs/mkdocs/docs/blog/posts/: first-office.md
docs/mkdocs/docs/development/: environment.md  quick-start.md
docs/mkdocs/docs/schema/: partcad.json
docs/source/: conf.py  configuration.rst  contributing.rst  design.rst  development.rst  features.rst  implementation_details.rst  index.rst  installation.rst  intro.rst  troubleshooting.rst  tutorial.rst  use_cases.rst
partcad/: README.md  pyproject.toml  requirements-dev.in  requirements.txt  tox.ini
partcad-cli/: pyproject.toml  requirements.txt
partcad-cli/src/partcad_cli/: __init__.py  cli.py  cli_add.py  cli_ai_regenerate.py  cli_info.py  cli_init.py  cli_inspect.py  cli_install.py  cli_list.py  cli_render.py  cli_status.py  cli_supply_caps.py  cli_supply_find.py  cli_supply_order.py  cli_supply_quote.py  cli_test.py
partcad-cli/src/partcad_cli/click/: cli_context.py  command.py  command_test.py  conftest.py  loader.py
partcad-cli/src/partcad_cli/click/commands/: add.py  adhoc.py  ai.py  config.py  convert.py  export.py  healthcheck.py  import.py  info.py  init.py  inspect.py  install.py  lint.py  list.py  render.py  reset.py  search.py  status.py  supply.py  test.py  update.py  version.py
partcad-cli/src/partcad_cli/click/commands/add/: assembly.py  dep.py  package.py  part.py  sketch.py
partcad-cli/src/partcad_cli/click/commands/adhoc/: convert.py
partcad-cli/src/partcad_cli/click/commands/ai/: regenerate.py
partcad-cli/src/partcad_cli/click/commands/convert/: __init__.py  part.py  sketch.py
partcad-cli/tests/unit/: conftest.py  test_version.py
partcad/src/partcad/: __init__.py  ai.py  ai_feature_file.py  ai_google.py  ai_ollama.py  ai_openai.py  assembly.py  assembly_config.py  assembly_config_manufacturing.py  assembly_factory.py  assembly_factory_alias.py  assembly_factory_assy.py  assembly_factory_file.py  assembly_types.py  cache.py  cache_hash.py  cache_shape.py  consts.py  context.py  conversion.py  converter.py  exception.py  factory.py  file_factory.py  file_factory_url.py  geom.py  globals.py  interface.py  interface_inherit.py  logging.py  logging_ansi_terminal.py  mating.py  part.py  part_config.py  part_config_manufacturing.py  part_factory.py  part_factory_3mf.py  part_factory_ai.py  part_factory_ai_build123d.py  part_factory_ai_cadquery.py  (+111 more)
partcad/src/partcad/actions/: assy_actions.py  part_actions.py
partcad/src/partcad/actions/assembly/: import_assy.py
partcad/src/partcad/actions/part/: __init__.py  convert.py  import_part.py
partcad/src/partcad/actions/sketch/: __init__.py  convert.py
partcad/src/partcad/adhoc/: convert.py
partcad/src/partcad/converters/: __init__.py  base_converter.py  cad_converter.py  step_converter.py  stl_converter.py
partcad/src/partcad/healthcheck/: __init__.py  healthcheck.py  python_version.py  windows_registry.py
partcad/src/partcad/part_factory/: __init__.py  part_factory.py  part_factory_3mf.py  part_factory_ai_build123d.py  part_factory_ai_cadquery.py  part_factory_ai_openscad.py  part_factory_alias.py  part_factory_brep.py  part_factory_build123d.py  part_factory_cadquery.py  part_factory_enrich.py  part_factory_extrude.py  part_factory_feature_ai.py  part_factory_file.py  part_factory_kicad.py  part_factory_obj.py  part_factory_python.py  part_factory_scad.py  part_factory_step.py  part_factory_stl.py  part_factory_sweep.py  registry.py
partcad/src/partcad/schema/: partcad.json  validator.py
partcad/src/partcad/template/: init-private.yaml  init-public.yaml
partcad/src/partcad/test/: all.py  cad.py  cam.py  cam_additive_solid.py  cam_forming.py  cam_subtractive.py  test.py
partcad/src/partcad/wrappers/: cq_serialize.py  ocp_serialize.py  wrapper_brep.py  wrapper_build123d.py  wrapper_cadquery.py  wrapper_common.py  wrapper_openscad.py  wrapper_provider.py  wrapper_render_3mf.py  wrapper_render_brep.py  wrapper_render_dxf.py  wrapper_render_obj.py  wrapper_render_png.py  wrapper_render_svg.py  wrapper_render_threejs.py  wrapper_sdf.py  wrapper_step.py
partcad/src/partcad/wrappers/load/: wrapper_3mf.py  wrapper_brep.py  wrapper_build123d.py  wrapper_cadquery.py  wrapper_extrude.py  wrapper_import_dxf.py  wrapper_obj.py  wrapper_provider.py  wrapper_scad.py  wrapper_step.py  wrapper_stl.py  wrapper_sweep.py
partcad/src/partcad/wrappers/py_stubs/: ocp_vscode.py
partcad/src/partcad/wrappers/render/: wrapper_render_3mf.py  wrapper_render_brep.py  wrapper_render_gltf.py  wrapper_render_obj.py  wrapper_render_png.py  wrapper_render_step.py  wrapper_render_stl.py  wrapper_render_svg.py  wrapper_render_threejs.py
partcad/tests/: conftest.py  partcad.yaml
partcad/tests/unit/: test_adhoc_convert.py  test_adhoc_convert_part.py  test_adhoc_convert_sketch.py  test_assembly.py  test_assembly_alias.py  test_assembly_manufacturing.py  test_context.py  test_convert.py  test_convert_part.py  test_convert_sketch.py  test_enrich_resolution.py  test_file.py  test_genai.py  test_git_clone_retries.py  test_import_assy.py  test_import_part.py  test_part.py  test_part_alias.py  test_part_enrich.py  test_part_manufacturing.py  test_part_params.py  test_project.py  test_project_config.py  test_provider.py  test_render.py  test_runtime_python.py  test_sketch.py  test_test.py
partcad/tests/unit/data/: project_config_include.yaml  project_config_template.yaml  project_config_valid_1.yaml
partcad/tests/unit/data/subdir/: include.j2
(+330 files in other folders)
