
[tool.pytest.ini_options]
pythonpath = "partcad/src"
filterwarnings = [
    "ignore:.*is a deprecated alias for.*:DeprecationWarning"
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]

[tool.isort]
profile = "black"
known_first_party = ["partcad"]

[tools.pyright]
reportMissingTypeArgument = true  # Report generic classes used without type arguments
strictListInference = true  # Use union types when inferring types of lists elements, instead of Any

# export POETRY_MULTIPROJECT_CHECK_DIR="/tmp/.check_partcad-dev"
# export POETRY_MULTIPROJECT_PREPARE_DIR="/tmp/.prepare_partcad-dev"

[tool.poetry.plugins."poetry-multiproject-plugin"]
cache-dir = "/tmp/.prepare_partcad-dev"

[tool.poetry]
name = "partcad-dev"
version = "0.1.0"
description = "Development Environment for PartCAD"
authors = [
  "Roman Kuzmenko <support@partcad.org>",
  "Alexander Ilyin <alexander@ilyin.eu>"
]
license = "Apache 2.0"
readme = "README.md"
packages = [
  { include = "partcad", from = "partcad/src" },
  { include = "partcad_cli", from = "partcad-cli/src" }
]

[tool.poetry.scripts]
pc = 'partcad_cli:main_cli'
partcad = 'partcad_cli.click.command:cli'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
readthedocs-sphinx-search = "^0.3.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = ">=0.5.1"
docutils = "^0.21.2"
readthedocs-sphinx-search = "^0.3.2"
sphinx-autodoc-typehints = "1.12.0"
sphinx-copybutton = "^0.5.2"
sphinx-hoverxref = "^1.4.2"
sphinx-design = "^0.6.1"

[tool.poetry.group.partcad.dependencies]
ocp-tessellate = "^3.0.8"
cadquery = ">=2.4.0"
build123d = "0.7.0"
scipy = ">=1.11.1"
pyyaml = ">=6.0.1"
gitpython = ">=3.1.40"
ruamel-yaml = ">=0.18.5"
packaging = ">=23.1"
setuptools = "^75.6.0"
jinja2 = "^3.1.4"
requests = "^2.32.3"
aiofiles = "^24.1.0"
aiohttp = "^3.11.7"
google-generativeai = "^0.8.3"
pillow = "^11.0.0"
openai = "^1.55.1"
ollama = "^0.4.1"

[tool.poetry.group.cli.dependencies]
renderlab = "^0.1.20230421184216"
rlpycairo = "^0.3.0"
svglib = "^1.5.1"
ocp-vscode = "^2.6.1"

[tool.poetry.group.performance.dependencies]
snakeviz = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
