[tool.poetry]
name = "partcad-docs"
version = "0.1.0"
description = "Package manager for CAD models and a modelling framework"
authors = ["\"Roman Kuzmenko <support@partcad.org>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
docutils = "^0.21.2"
readthedocs-sphinx-search = "^0.3.2"
sphinx-autodoc-typehints = "^2.5.0"
sphinx-copybutton = "^0.5.2"
sphinx-hoverxref = "^1.4.1"
sphinx-design = "^0.6.1"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
