[project]
name = "partcad-cli"
version = "0.7.16"
description = "Command-line interface to PartCAD"
readme = "README.md"
keywords = ["cadquery", "build123d", "cad", "design", "openscad", "step", "stl"]
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
]
maintainers = [
  {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
]
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
pc = "partcad_cli:main_cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/openvmp/partcad"
Issues = "https://github.com/openvmp/partcad/issues"

[tool.poetry]
name = "partcad-cli"
version = "0.7.16"
description = "Command-line interface to PartCAD"
authors = ["Roman Kuzmenko <openvmp@proton.me>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
partcad = "0.7.16"
renderlab = "^0.1.20230421184216"
rlPyCairo = "^0.3.0"
svglib = "^1.5.1"
ocp-vscode = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
