[project]
name = "partcad"
packages = [{include = "partcad", from = "src"}]
version = "0.7.16"
description = "Package manager for CAD models and a modelling framework"
readme = "README.md"
keywords = ["cadquery", "build123d", "cad", "design", "openscad", "step", "stl"]
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Roman Kuzmenko", email = "support@partcad.org" }
]
maintainers = [
  {name = "Roman Kuzmenko", email = "support@partcad.org" }
]
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
"partcad.wrappers" = ["*.py"]
"partcad.template" = ["*.yaml"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/openvmp/partcad"
Issues = "https://github.com/openvmp/partcad/issues"

[tool.poetry]
name = "partcad"
version = "0.7.16"
description = "Package manager for CAD models and a modelling framework"
authors = ["Roman Kuzmenko <support@partcad.org>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
build123d = "^0.5.0"
cadquery = "^2.4.0"
numpy = "^1.24.1"
ocp-tessellate = "^3.0.8"
scipy = "^1.11.1"
pyyaml = "^6.0.1"
GitPython = "^3.1.40"
"ruamel.yaml" = "^0.18.5"
packaging = "^23.1"
setuptools = "^75.3.0"
Jinja2 = "^3.1.4"
requests = "^2.32.3"
aiofiles = "^24.1.0"
aiohttp = "^3.10.10"
google-generativeai = "^0.8.3"
pillow = "^11.0.0"
openai = "^1.54.3"
ollama = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
